RESOLVED FIXED235613
Fix the lldb Color formatter
https://bugs.webkit.org/show_bug.cgi?id=235613
Summary Fix the lldb Color formatter
Simon Fraser (smfr)
Reported 2022-01-25 15:17:01 PST
Fix the lldb Color formatter
Attachments
Patch (2.56 KB, patch)
2022-01-25 15:17 PST, Simon Fraser (smfr)
darin: review+
Simon Fraser (smfr)
Comment 1 2022-01-25 15:17:25 PST
Darin Adler
Comment 2 2022-01-25 15:21:23 PST
Comment on attachment 449972 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=449972&action=review > Tools/lldb/lldb_webkit.py:537 > + # From ColorSpace.h. Should we add a comment to ColorSpace.h telling anyone who edits that they need to update this too?
Simon Fraser (smfr)
Comment 3 2022-01-25 15:23:56 PST
Will do.
Simon Fraser (smfr)
Comment 4 2022-01-25 16:00:41 PST
Radar WebKit Bug Importer
Comment 5 2022-01-25 16:01:17 PST
Sam Weinig
Comment 6 2022-01-25 16:21:08 PST
Comment on attachment 449972 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=449972&action=review >> Tools/lldb/lldb_webkit.py:537 >> + # From ColorSpace.h. > > Should we add a comment to ColorSpace.h telling anyone who edits that they need to update this too? "anyone" == "that idiot Sam who has broken this like 10 times now :(" And yes please.
Darin Adler
Comment 7 2022-01-25 17:07:19 PST
The fact that we don’t generate one or both of these from a single source is just "because we are cowards".
Note You need to log in before you can comment on or make changes to this bug.