Fix the lldb Color formatter https://bugs.webkit.org/show_bug.cgi?id=235613

Reviewed by Darin Adler.
Source/WebCore:

* platform/graphics/ColorSpace.h:

Tools:

Copy the list of color spaces from ColorSpace.h

* lldb/lldb_webkit.py:
(WebCoreColorProvider._to_string_out_of_line):


Canonical link: https://commits.webkit.org/246409@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288587 268f45cc-cd09-0410-ab3c-d52691b4dbfc